add doc release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,9 @@ cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "C
 [build-system]
 requires = ["maturin>=1.0,<2.0"]
 build-backend = "maturin"
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "jinja2>=3.1.6",
+]
