--- a/.github/workflows/update_registry.yml
+++ b/.github/workflows/update_registry.yml
@@ -1,37 +1,40 @@
-name: Update PyPI registry
+name: Deploy registry to Pages
 
 on:
     release:
         types: [published]
     workflow_dispatch:
 
+permissions:
+    contents: read
+    pages: write
+    id-token: write
+
 jobs:
-    update-registry:
+    deploy:
         runs-on: ubuntu-latest
-        permissions:
-            contents: write
 
         steps:
             - uses: actions/checkout@v4
-
-            - name: Install uv
-              uses: astral-sh/setup-uv@v6
-              with:
-                  enable-cache: true
 
             - name: Set up Python
               uses: actions/setup-python@v5
               with:
                   python-version: "3.12"
 
+            - name: Install uv
+              uses: astral-sh/setup-uv@v6
+              with:
+                  enable-cache: true
+
             - name: Generate registry
               run: uv run scripts/generate_registry.py
 
-            # - name: Commit docs
-            #   run: |
-            #       git config user.name "github-actions"
-            #       git config user.email "github-actions@github.com"
+            # IMPORTANT: this directory becomes the site root
+            - name: Upload Pages artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+                  path: .pages
 
-            #       git add docs/simple
-            #       git commit -m "Update PyPI registry" || echo "No changes"
-            #       git push
+            - name: Deploy to GitHub Pages
+              uses: actions/deploy-pages@v4
