--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "toolx"
-version = "0.0.0" # dummy, actual is set by maturin from git tag
+version = "0.0.4"
 edition = "2024"
 
 [lib]
