--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,11 @@ module-name = "toolx._core"
 python-packages = ["toolx"]
 python-source = "src"
 
-[tool.setuptools_scm]
-
 [tool.uv]
 cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]
 
 [build-system]
-requires = ["maturin>=1.0,<2.0", "setuptools-scm"]
+requires = ["maturin>=1.0,<2.0"]
 build-backend = "maturin"
 
 [dependency-groups]
